Spacing fix

--- a/static/styles/main.sass
+++ b/static/styles/main.sass
@@ -252,7 +252,7 @@ body
     #body article footer .kudos
         position: relative
         margin: 0
-        margin-top: $y-height
+        margin-top: $y-height / 2
         margin-bottom: $y-height
 
 @media (max-width: $body-width + $header-width * 2 + $x-width * 2)
